objects/HealthCloudGA__LeadReferralRecordType__mdt.object
<CustomObject>
    <description>Defines the Record Type for Lead Referrals in Health Cloud</description>
    <fields>
        <fullName>HealthCloudGA__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LeadRecordTypeName__c</fullName>
        <description>Name of record type on Lead object which is valid for Health Cloud</description>
        <label>Lead Record Type Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LeadReferralRecordTypeNamespace__c</fullName>
        <description>Lead referral record type namespace.</description>
        <label>Record Type Namespace</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Lead Referral Record Type</label>
    <pluralLabel>Lead Referral Record Types</pluralLabel>
</CustomObject>